# rOSt

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: README.md
.github/workflows/: auto-merge.yml  rust-clippy.yml  rust-pr.yml  todo.yml
boot/src/: main.rs
crosstrait/: Cargo.toml  LICENSE.MIT
crosstrait/src/: critical_section.rs  global.rs  lib.rs
docs/: CONTRIBUTING.md  README.md  Tag-Based Entity System.md
drivers/ata/: Cargo.toml
drivers/ata/src/: bus.rs  constants.rs  disk.rs  disk_descriptor.rs  lib.rs  partition.rs
drivers/tbes/: Cargo.toml
drivers/tbes/src/: lib.rs  multi_value_index.rs
drivers/tbes/src/query/: mod.rs  negate.rs  query_context.rs  query_writer.rs  runnable.rs
drivers/tbes/src/tags/: boolean_tag.rs  integer_tag.rs  mod.rs  ref_tag.rs
drivers/vga/: Cargo.toml
drivers/vga/src/: lib.rs  pixel_buffer.rs  vga_core.rs  vga_device.rs
internal_utils/: Cargo.toml
internal_utils/src/: capabilities.rs  critical_section.rs  ikd.rs  lib.rs  logger.rs  port_extensions.rs  serial.rs
internal_utils/src/block_device/: capability.rs  mod.rs  traits.rs
internal_utils/src/channels/: cache_padded.rs  mod.rs  spmc.rs  spsc.rs
internal_utils/src/clocks/: mod.rs  rtc.rs  tick.rs
internal_utils/src/display/: hex_number.rs  mod.rs
internal_utils/src/gpu_device/: capability.rs  mod.rs  traits.rs  vga_color.rs
internal_utils/src/kernel_information/: frame_allocator.rs  kernel_frame_buffer.rs  mod.rs
internal_utils/src/structures/: mod.rs  once.rs  permanent.rs
internal_utils/src/tag_store/: identity.rs  mod.rs  query.rs  tag.rs
kernel/: Cargo.toml
kernel/src/: addressing.rs  age_verification.rs  ikd.rs  lib.rs  main.rs
kernel/src/interrupts/: gdt.rs  interrupt_register.rs  mod.rs  pic.rs
kernel/src/interrupts/cpu_handlers/: breakpoint.rs  general_protection_fault.rs  page_fault.rs
kernel/src/interrupts/pic_handlers/: keyboard.rs  mod.rs  timer.rs
kernel/src/memory/: debug.rs  frame_allocator.rs  heap.rs  memory_init.rs  mod.rs  page_table.rs
kernel/src/processes/: dispatcher.rs  memory_mapper.rs  mod.rs  process.rs  scheduler.rs  thread.rs
kernel/src/syscalls/: mod.rs  system_call.rs
src/: main.rs
test_framework/: Cargo.toml
test_framework/src/: lib.rs  test_runner.rs  testable.rs
