[package]
name = "os"
version = "0.1.0"
edition = { workspace=true }

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.12"

[dependencies]
bitflags.workspace = true
ovmf-prebuilt = "0.2.7"

[profile.dev]
lto = true
codegen-units = 1
incremental = false

[profile.release]
lto = true
codegen-units = 1
incremental = false

[workspace]
members = [
    "internal_utils",
    "boot",
    "kernel",
    "drivers/ata",
    "drivers/vga",
    "test_framework"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
internal_utils = { path = "internal_utils"}
kernel = { path = "kernel" }
vga = { path = "drivers/vga" }
ata = { path = "drivers/ata" }
test_framework = { path = "test_framework" }
bitflags = "2.10.0"
bootloader_api = "0.11"
pic8259 = "0.11.0" # interrupt controller
noto-sans-mono-bitmap = { version = "0.3.2" } # nice bitmap font
pc-keyboard = "0.8.0" # keyboard scan code converter
linked_list_allocator = "0.10.5" # allocator implementation
spin = "0.10.0" # spinlock implementation
x86_64 = "0.15.4" # configures the serial port, cpu exception table
tinytga = "0.5.0" # for loading the OS logo
uart_16550 = "0.4.0" # serial port interface used for sending debug output to the host
lazy_static = { version = "1.5.0", features = [ "spin_no_std" ]}

###################################
# Register all failing tests here #
###################################
