[package]
name = "os"
version = "0.1.0"
edition = { workspace = true }

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.12"

[dependencies]
bitflags.workspace = true
ovmf-prebuilt = "0.2.8"

[profile.dev]
panic = "unwind"
debug = false
lto = true
strip = true
codegen-units = 1
incremental = false

[profile.release]
panic = "unwind"
debug = false
lto = true
strip = true
codegen-units = 1
incremental = false

[workspace]
resolver = "3"
members = ["internal_utils", "kernel", "drivers/ata", "drivers/vga"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
internal_utils = { path = "internal_utils" }
kernel = { path = "kernel" }
vga = { path = "drivers/vga" }
ata = { path = "drivers/ata" }
tbes = { path = "drivers/tbes" }

itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
bitflags = { version = "2.11.1", default-features = false }
bootloader_api = { version = "0.11" }
pic8259 = { version = "0.11.0" }
noto-sans-mono-bitmap = { version = "0.3.2" }
pc-keyboard = { version = "0.9.0" }
linked_list_allocator = { version = "0.10.6", default-features = false, features = [
    "use_spin",
] }
spin = { version = "0.10.0", default-features = false, features = [
    "use_ticket_mutex",
    "once",
    "rwlock",
] }
x86_64 = { version = "0.15.4" }
byteorder = { version = "1", default-features = false }
tinytga = { version = "0.5.0" }
uart_16550 = { version = "0.4.0" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
crosstrait = { version = "0.1.4", default-features = false, features = [
    "alloc",
    "global_registry",
] }

###################################
# Register all failing tests here #
###################################
