[package]
name = "crosstrait"
version = "0.1.3"
edition = "2021"
authors = ["Robert Jördens <rj@quartiq.de>", "Michał Isalski"]
license = "MIT OR Apache-2.0"
description = "Cast from `dyn Any` to other trait objects, with no_std, no alloc support"
repository = "https://github.com/quartiq/crosstrait"
documentation = "https://docs.rs/crosstrait"
readme = "README.md"
categories = ["rust-patterns", "embedded", "no-std", "no-std::no-alloc"]
keywords = ["linkage", "trait", "cast", "any"]

[dependencies]
linkme = { version = "0.3", features = ["used_linker"] }
heapless = "0.9.2" # not(feature = "std")
gensym = "0.1"
once_cell = { version = "1.21.4", default-features = false, features = [
    "alloc",
    "critical-section",
] }
critical-section = { version = "1.2.0", features = ["restore-state-u8"] }
spin = { workspace = true }
x86_64 = { workspace = true }
