[package]
name = "kernel"
version = "0.1.0"
edition = { workspace = true }

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
internal_utils = { workspace = true }
bootloader_api = { workspace = true }
spin = { workspace = true }
x86_64 = { workspace = true }
uart_16550 = { workspace = true }
pic8259 = { workspace = true }
pc-keyboard = { workspace = true }
lazy_static = { workspace = true }
bitflags = { workspace = true }
tinytga = { workspace = true }
vga = { workspace = true }
ata = { workspace = true }
tbes = { workspace = true }
crosstrait = { workspace = true }
itertools = { workspace = true }
